--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       content="https://refine.dev/img/refine_social.png"
     />
     <title>
-      refine - Build your React-based CRUD applications, without constraints.
+     Openinapp
     </title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript> </noscript>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
