--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="https://res.cloudinary.com/dvcksw7qc/image/upload/v1706174390/Openinapp/Ellipse_111_rdyxgf.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -12,12 +12,12 @@
     <meta
       data-rh="true"
       property="og:image"
-      content="https://refine.dev/img/refine_social.png"
+      content="https://res.cloudinary.com/dvcksw7qc/image/upload/v1706174390/Openinapp/Ellipse_111_rdyxgf.jpg"
     />
     <meta
       data-rh="true"
       name="twitter:image"
-      content="https://refine.dev/img/refine_social.png"
+      content="https://res.cloudinary.com/dvcksw7qc/image/upload/v1706174390/Openinapp/Ellipse_111_rdyxgf.jpg"
     />
     <title>
      Openinapp
